# claude-manager

./: .gitignore  CLAUDE.md  README.md  SPEC-search.md  install.sh  pyproject.toml
src/claude_manager/: __init__.py  main.py
